# ensembl-genes-nf

./: .gitignore  .modules.nf.swp  NOTICE  README.md  _index.html  assembly_pipeline.nf  buscoALL_IN.nf  busco_genome_mode.nf  busco_pipeline.nf  busco_protein_mode.nf  fetch_genomes.sh  main.nf  modules.nf  nextflow.config  omark_pipeline.nf  params.config  pyproject.toml  requirements.txt  setup.py  test_species.csv
.github/workflows/: documentation.yaml
MirMachine/: README.md  main.nf  nextflow.config  params.config  rapid_release_species_2024_07_30.csv  report.nf  test.csv  test.csv.tab
MirMachine/genebuild_tools/: Run_mirmachine.sh  run_mirmachine_species.sh
MirMachine/modules/local/: check_existing_predictions.nf  clade_matcher.nf  collate_results.nf  fetch.nf  format_clades.nf  generate_scores.nf  get_ncbi_taxonomy.nf  list_mirmachine_clades.nf  match_clade.nf  mirMachine.nf  mirmachine.nf  rapid.nf  score_single_heatmap.nf
MirMachine/scripts/: match_clade.py
MirMachine/subworkflows/local/: mirMachine.nf
anno_subpipelines/sncrna_pipe/: main.nf  nextflow.config  params.config
anno_subpipelines/sncrna_pipe/modules/local/: cmsearch.nf  trnascan.nf
anno_subpipelines/sncrna_pipe/subworkflows/local/: sncrna.nf
annotation_stats/: .python-version  README.md  annotation_stats.nf  get_new_annotations.sql  get_recent_annotations.sql  pyproject.toml  tasks.py
conf/: assembly_checker.config  busco.config  lsf.config  omark.config  slurm.config
config/: resources.config  shared-module.config
data/: busco_dataset.txt
docs/source/: conf.py  index.rst  install.rst
ensembl-anno/: main.nf  nextflow.config
ensembl-anno/conf/: lsf.config
ensembl_anno/: main.nf  nextflow.config  params.config
ensembl_anno/modules/local/: cmsearch.nf  trnascan.nf
ensembl_anno/subworkflows/local/: sncrna.nf
modules/: busco_dataset.nf  busco_genome_autolineage.nf  busco_genome_lineage.nf  busco_genome_output.nf  busco_lineage.nf  busco_output.nf  busco_protein_lineage.nf  busco_protein_output.nf  example-module.nf  fasta_output.nf  fetch_genome.nf  fetch_proteins.nf  omamer_hog.nf  process_assembly.nf  run_omark.nf  species_metadata.nf  species_outdir.nf  utils.nf
modules/local/: coverage.nf  star.nf
old_script/: busco_protein_mode.nf  busco_protein_mode_dsl2.nf
pipelines/nextflow/conf/: busco.config  genomio.config  omark.config  repeatmasker.config  repeatmodeler.config
pipelines/nextflow/data/: README.txt  busco_lineage copy.csv  busco_lineage.json  coredb_meta-keys.txt  meta_filter.json  notes
pipelines/nextflow/modules/: build_metadata.nf  build_repeatmodeler_database.nf  check_and_download_rmlibrary.nf  check_file_exists.nf  cleaning.nf  copy_output_to_ensembl_ftp.nf  create_slices.nf  download_file.nf  fetch_genome.nf  fetch_genome_core.nf  fetch_protein.nf  fetch_proteins.nf  generate_repeatmodeler_library.nf  query_core_meta.nf  repeatmodeler.nf  run_repeatmasker.nf  species_metadata.nf  utils.nf
pipelines/nextflow/modules/busco/: build_busco_input.nf  busco_assembly_db.nf  busco_core_metakeys.nf  busco_dataset.nf  busco_genome_lineage.nf  busco_lineages.nf  busco_output.nf  busco_output.nf.rapid.main  busco_protein_lineage.nf
pipelines/nextflow/modules/ensembl_statistics/: add_stats_on_core.nf  create_stats_json.nf  populate_db.nf  run_ensembl_meta.nf  run_statistics.nf  update_stats_on_core.nf
pipelines/nextflow/modules/genome_metadata/: prepare_metadata.nf
pipelines/nextflow/modules/omark/: omamer_hog.nf  omark.nf  omark_output.nf
pipelines/nextflow/modules/repeat_modeler/: fetch_genome.nf  fetch_repeat_model.nf  generate_repeatmodeler_library.nf
pipelines/nextflow/modules/repeatmasker/: repeatmasker.nf
pipelines/nextflow/modules/repeatmodeler/: build_repeatmodeler_database.nf
pipelines/nextflow/subworkflows/: prepare_metadata.nf  run_busco.nf  run_ensembl_stats.nf  run_omark.nf  run_repeatmasker.nf  run_repeatmodeler.nf
pipelines/nextflow/workflows/: input_csv_schema.json  input_csv_schmea.json  main.nf  nextflow.config  nextflow_schema.json  repeats.nf  statistics.nf  statistics.nf.main
pipelines/nextflow/workflows/repeat_modeler/: main.nf  nextflow.config
pipelines/repeat/modules/: check_and_download_rmlibrary.nf  generate_repeatmodeler_library.nf  run_repeatmasker.nf
pipelines/repeat/workflows/: main.nf
scripts/: busco_genome_mode.nf  nf-genes-pipeline-cmd-setup.sh
src/python/ensembl/genes/statistics/: clade_selector.py
subworkflows/local/: bam_processing.nf
supplementary_files/: get_busco_dataset.sh  meta.sql  perl5lib.sh
workflows/: assembly_checker.nf  busco_pipeline.nf  omark_pipeline.nf
