# See the NOTICE file distributed with this work for additional information
# regarding copyright ownership.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[project]
name = "ensembl-genes-nf"
description = "Ensembl Gene Statistics pipeline"
requires-python = ">= 3.8"
version = "0.1"
readme = "README.md"
authors = [
    {name = "Ensembl", email = "dev@ensembl.org"},
]
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
keywords = ["ensembl", 
"annotation", 
"genetics",
"bioinformatics",
"setuptools"
]  
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
# dependencies = []

[project.optional-dependencies]
dev = [
    "black",
    "coverage",
    "ipython",
    "mock",
    "mypy",
    "pylint",
    "pytest",
    "Sphinx",
]
doc = [
    "mock",
    "Sphinx",
]

[project.urls]
homepage = "https://www.ensembl.org"
repository = "https://github.com/Ensembl/ensembl-genes-nf"

[project.scripts]
#run_fastqc = "ensembl.genes.metadata.qc.run_fastqc:main"

[build-system]
build-backend = "setuptools.build_meta"
requires = [ 
    "setuptools",
    "setuptools-scm",
    "wheel"
]

[tool.black]
line-length = 110

[tool.pylint.main]
max-line-length = 110
disable = [
    "invalid-name",
    "similarities",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-locals",
    "too-many-statements",
    "unspecified-encoding",
    "wildcard-import",
]

[tool.mypy]
explicit_package_bases = true
ignore_missing_imports = true
show_error_codes = true
warn_unused_configs = true

[tool.pytest.ini_options]
addopts = "-v --tb=native"
norecursedirs = [
    "docs",
    "*.egg_info",
]
testpaths = ["tests"]

