[tool.poetry]
name = "annotation-stats"
version = "0.1.0"
description = ""
authors = ["William Stark <william@ebi.ac.uk>"]
readme = "README.md"
packages = [{include = "annotation_stats"}]

[tool.poetry.dependencies]
python = "^3.9"
fire = "^0.5.0"
pymysql = "^1.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
